fix scrollbar in table

--- a/client/src/foundation/style.css
+++ b/client/src/foundation/style.css
@@ -47,7 +47,33 @@
   display: block;
 }
 
-/* ################# */
+/* ----------------      ScrollBar      ----------------------- */
+/* width */
+table ::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* Track */
+table ::-webkit-scrollbar-track {
+  -webkit-border-radius: 10px;
+  box-shadow: inset 0 0 5px #5ba2f8;
+  border-radius: 10px;
+}
+
+/* Handle */
+table ::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  box-shadow: inset 0 0 5px #ffffff;
+
+  background-image: linear-gradient(to right, #007aff, #73b0f1, #007aff);
+}
+
+/* Handle on hover */
+table ::-webkit-scrollbar-thumb:hover {
+  background-image: linear-gradient(to right, #62aeff, #007aff, #62aeff);
+}
+/* ------------------------------------------------------------ */
 .height-9 {
   height: 93vh;
 }
